# needlestack-core

./: pixi.toml  pyproject.toml
src/needlestack_core/: captioner.py  constants.py  embedder.py  taxonomy.py
tests/: conftest.py  test_captioner.py  test_taxonomy.py
