[project]
name = "needlestack-core"
version = "0.1.0"
description = "Shared ML primitives for needlestack: embeddings, VLM captioning, domain taxonomy"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0,<3",
    "open-clip-torch>=2.20.0,<3",
    "httpx>=0.25.0,<1",
    "Pillow>=10.0.0,<11",
    "numpy>=1.24.0,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.0.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/needlestack_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
