[project]
name = "needlestack-core"
version = "0.1.0"
description = "Shared ML primitives for needlestack: embeddings, VLM captioning, domain taxonomy"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0,<3",
    "open-clip-torch>=2.20.0,<3",
    "httpx>=0.25.0,<1",
    "Pillow>=10.0.0,<11",
    "numpy>=1.24.0,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.0.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/needlestack_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# pytest-cov was already a declared dev dependency but never configured or
# invoked. Coverage is a floor-check, not a quality gate — deliberately not
# wired into the default `test` task; invoke explicitly via `pixi run
# test-cov`. /full-review's Phase 3.5 detects this config and runs it the
# same way.
[tool.coverage.run]
source = ["src"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
skip_empty = true
